fix: refactor code index.html

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -29,7 +29,7 @@
           </label>
           <button class="btn-reset btn-all feedback__form-btn">Отправить</button>
           <div class="feedback__form-checkbox">
-            <input class="visually-hidden feedback__form-checkbox-hidden" id="feedback__form-checkbox-hidden" type="checkbox" name="feedbackFormAgreement" value="yes" checked required>
+            <input class="visually-hidden feedback__form-checkbox-hidden input-checkbox" id="feedback__form-checkbox-hidden" type="checkbox" name="feedbackFormAgreement" value="yes" checked required>
             <label class="btn-reset feedback__form-checkbox-text" for="feedback__form-checkbox-hidden">
                 Принимаю
               <a href="#no-scrolling" class="feedback__form-checkbox-link">пользовательское соглашение</a>
@@ -37,14 +37,6 @@
           </div>
         </form>
       </div>
-      <picture class="feedback__wrapper-picture">
-        <source srcset="img/feedback/feedback@768x1.avif, img/feedback/feedback@768x2.avif 2x, img/feedback/feedback@768x3.avif 3x" type="image/avif" media="(max-width: 992px)">
-        <source srcset="img/feedback/feedback@768x1.webp, img/feedback/feedback@768x2.webp 2x, img/feedback/feedback@768x3.webp 3x" type="image/webp" media="(max-width: 992px)">
-        <source srcset="img/feedback/feedback@768x1.png, img/feedback/feedback@768x2.png 2x, img/feedback/feedback@768x3.png 3x" type="image/webp" media="(max-width: 992px)">
-        <source srcset="img/feedback/feedback@1920x1.avif, img/feedback/feedback@1920x2.avif 2x, img/feedback/feedback@1920x3.avif 3x" type="image/avif">
-        <source srcset="img/feedback/feedback@1920x1.webp, img/feedback/feedback@1920x2.webp 2x, img/feedback/feedback@1920x3.webp 3x" type="image/webp">
-        <img loading="lazy" src="img/feedback/feedback@1920x1.png" srcset="img/feedback/feedback@1920x2.png 2x, img/feedback/feedback@1920x3.png 3x" class="feedback__wrapper-image" width="624" height="383" alt="Фоновая картинка">
-      </picture>
     </div>
   </div>
 </section>
