--- a/src/partials/useful.html
+++ b/src/partials/useful.html
@@ -4,7 +4,7 @@
       <h2 class="section-title useful__title">Полезное</h2>
       <div class="useful__controls">
         <button class="btn-reset useful__controls-btn useful-controls-prev">
-          <svg class="useful__controls-btn-img">
+          <svg class="useful__controls-btn-img useful__controls-btn-img-prev">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
         </button>
