--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -179,7 +179,7 @@
         }
       }
 
-      & .choosing__region-wrap {
+      & .choosing {
         display: none;
 
         @include mobile {
