--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -1,10 +1,10 @@
 .categories {
-  padding-top: 67px;
+  padding-top: 70px;
   padding-bottom: 35px;
 
   @include mobile {
     & {
-      padding-top: 70px;
+      padding-top: 38.3px;
       padding-bottom: 40px;
     }
   }
@@ -152,6 +152,7 @@
         display: flex;
         column-gap: 30px;
         margin-bottom: 13px;
+        flex-wrap: wrap;
 
         @include tablet {
           & {
