--- a/src/scss/components/_oxford.scss
+++ b/src/scss/components/_oxford.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr;
 
   &__picture {
-    display: block;
+    display: flex;
     grid-column: 1/-1;
     grid-row: 1/2;
 
@@ -23,6 +23,7 @@
     grid-column: 1/-1;
     grid-row: 1/2;
     padding-top: 154px;
+    padding-bottom: 150px;
     width: 100%;
 
     @include small-tablet {
@@ -35,6 +36,7 @@
       & {
         margin-left: 0;
         padding-top: 32px;
+        padding-bottom: 32px;
       }
     }
   }
@@ -56,7 +58,7 @@
 
   &__text {
     max-width: 508px;
-    margin-bottom: 49px;
+    margin-bottom: 48.5px;
     font-family: 'Open Sans';
     font-weight: 400;
     font-size: 48px;
