feat: add validaition checkbox in productBuyOneClick and add push deploy in gh-pages

--- a/src/partials/productModalBuyOneClick.html
+++ b/src/partials/productModalBuyOneClick.html
@@ -19,8 +19,8 @@
       </label>
       <button class="btn-reset btn-all product__buy-form-btn" type="submit">Отправить</button>
       <div class="product__buy-form-checkbox">
-        <input class="visually-hidden product__buy-form-checkbox-hidden" id="product__buy-form-checkbox-hidden" type="checkbox" name="feedbackFormAgreement" value="yes" checked required>
-        <label class="btn-reset product__buy-form-checkbox-text" for="product__buy-form-checkbox-hidden">
+        <input class="visually-hidden product__buy-form-checkbox-hidden input-checkbox" id="product__buy-form-checkbox-hidden" type="checkbox" name="feedbackFormAgreement" value="yes" checked required>
+        <label class="btn-reset product__buy-form-checkbox-text " for="product__buy-form-checkbox-hidden">
             Принимаю
           <a href="#no-scrolling" class="product__buy-form-checkbox-link">пользовательское соглашение</a>
         </label>
