fix: select on safari

--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -21,6 +21,7 @@
   border-top: 1px solid var(--primary-color);
   transform: rotate(135deg);
   transition: border-color .3s ease-in-out;
+  z-index: 10;
 }
 
 .choices[data-type*=select-one].is-open::after {
