--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -1,6 +1,6 @@
 <section class="categories">
   <div class="container categories__container">
-    <h2 class="section-title categories__title">Топ категории</h2>
+    <h2 class="section-title categories__title" tabindex="0" aria-label="Вы находитесь в секции топ категории">Топ категории</h2>
     <ul class="list-reset categories__card-list">
       <li class="categories__card-item categories__card-item--sofas">
         <article class="categories__card-content">
