--- a/src/partials/guarantees.html
+++ b/src/partials/guarantees.html
@@ -1,26 +1,26 @@
 <section class="guarantees">
   <div class="container guarantees__container">
-    <h2 class="guarantees__subtitle">Гарантии</h2>
+    <h2 class="guarantees__subtitle" tabindex="0">Гарантии</h2>
     <ol class="list-reset guarantees__list">
       <li class="guarantees__item">
-        <p class="guarantees__text">
+        <p class="guarantees__text" tabindex="0">
           При приемке товара Покупатель должен внимательно проверить его количество, <no-typography>качество и ассортимент</no-typography> на соответствие сопроводительным документам и заказу. После подписания товарного чека Покупатель утрачивает право предъявления претензий, которые можно выявить при приемке товара.
         </p>
       </li>
       <li class="guarantees__item">
-        <p class="guarantees__text">
+        <p class="guarantees__text" tabindex="0">
           На товары, сборка которых производилась покупателем самостоятельно (не специалистами Продавца), гарантийные обязательства Продавца <no-typography>не распространяются</no-typography>. Также гарантия <no-typography>не распространяется</no-typography> на повреждения товара, полученные в ходе самостоятельной доставки и подъема товара. Покупатель не вправе отказаться от товара надлежащего качества, имеющего <no-typography>индивидуально-определенные свойства, т.е.</no-typography> если товар может быть использован исключительно приобретающим его потребителем.
         </p>
       </li>
       <li class="guarantees__item">
-        <p class="guarantees__text">
+        <p class="guarantees__text" tabindex="0">
           Возврат или обмен товара возможен при условии, что сохранена упаковка, товарный вид <no-typography>и потребительские</no-typography> свойства товара, а также товарный <no-typography>и кассовый</no-typography> чеки. В этом случае <no-typography>мы гарантируем</no-typography> вам возврат полной стоимости товара (за вычетом стоимости доставки). В случае отказа <no-typography>от товара</no-typography> при доставке, клиент оплачивает услуги доставки.
         </p>
       </li>
     </ol>
     <div class="guarantees__wrapper">
       <img loading="lazy" src="img/pencil.svg" class="guarantees__wrapper-image" width="77" height="116" alt="Изображение карандаша">
-      <p class="guarantees__wrapper-text">
+      <p class="guarantees__wrapper-text" tabindex="0">
         Срок гарантии на нашу мебель составляет от 18 до 60 месяцев
       </p>
     </div>
