--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" aria-label="Вы находитесь в главной секции">
   <div class="swiper hero__swiper">
     <ul class="list-reset swiper-wrapper">
       <li class="swiper-slide hero__slide">
