--- a/src/partials/navNavigation.html
+++ b/src/partials/navNavigation.html
@@ -1,4 +1,4 @@
-<nav class="navigation" title="Навигация по сайту" data-menu>
+<nav class="navigation" title="Навигация по сайту" data-menu aria-label="Основная">
 
   <button class="btn-reset navigation__close" data-menu-close>
     <svg class="navigation__close-img">
