--- a/src/partials/oxford.html
+++ b/src/partials/oxford.html
@@ -1,4 +1,4 @@
-<section class="oxford">
+<section class="oxford" tabindex="0" aria-label="Вы находитесь в секции оксфорд">
   <picture class="oxford__picture">
     <source srcset="img/oxford/oxford-bg320@1x.avif, img/oxford/oxford-bg320@2x.avif 2x, img/oxford/oxford-bg320@3x.avif 3x" type="image/avif" media="(max-width: 576px)">
     <source srcset="img/oxford/oxford-bg320@1x.webp, img/oxford/oxford-bg320@2x.webp 2x, img/oxford/oxford-bg320@3x.webp 3x" type="image/webp" media="(max-width: 576px)">
