--- a/src/partials/phoneLink.html
+++ b/src/partials/phoneLink.html
@@ -1,5 +1,5 @@
 <div class="phone">
-  <a href="tel:+74958854547" class="phone__link">
+  <a href="tel:+74958854547" class="phone__link" aria-label="Телефон интренет-магазина SitDownPls +74958854547">
     <svg class="phone__link-img">
       <use xlink:href="img/sprite.svg#phone"></use>
     </svg>
