--- a/src/partials/profit.html
+++ b/src/partials/profit.html
@@ -1,23 +1,23 @@
 <section class="profit">
   <div class="container profit__container">
     <div class="profit__content">
-      <h2 class="profit__subtitle">Что вы получаете?</h2>
+      <h2 class="profit__subtitle" tabindex="0">Что вы получаете?</h2>
       <ul class="list-reset profit__list">
         <li class="profit__item">
           <img loading="lazy" src="img/network.svg" class="profit__item-img" width="25" height="25" alt="Фоновое изображение">
-          <p class="profit__text">
+          <p class="profit__text" tabindex="0">
             Мы ценим идеи и вдохновение и предлагаем сотрудничество талантливым дизайнерам <no-typography>и</no-typography> архитекторам. Выпускаемая нами продукция гармонично дополнит любой современный проект.
           </p>
         </li>
         <li class="profit__item">
           <img loading="lazy" src="img/briefcase.svg" class="profit__item-img" width="25" height="25" alt="Фоновое изображение">
-          <p class="profit__text">
+          <p class="profit__text" tabindex="0">
             Комплексное решение для красивого и функционального обустройства любых пространств.
           </p>
         </li>
         <li class="profit__item">
           <img loading="lazy" src="img/git.svg" class="profit__item-img" width="25" height="25" alt="Фоновое изображение">
-          <p class="profit__text">
+          <p class="profit__text" tabindex="0">
             В ассортименте представлены все товарные группы для того, чтобы воссоздать обстановку в помещениях разных типов: кабинетах, смешанных пространствах, Open Space, гостевых и переговорных комнатах.
           </p>
         </li>
