--- a/src/partials/rating.html
+++ b/src/partials/rating.html
@@ -1,6 +1,6 @@
 <section class="rating">
   <div class="container rating__container">
-    <h2 class="section-title rating__title">Высокий рейтинг</h2>
+    <h2 class="section-title rating__title" tabindex="0" aria-label="Вы находитесь в секции высокий рейтинг">Высокий рейтинг</h2>
     <div class="rating__items card">
       @include('ratingCard.html')
     </div>
