--- a/src/partials/searchCatalog.html
+++ b/src/partials/searchCatalog.html
@@ -1,9 +1,9 @@
 <div class="form__search-wrapper">
-  <input class="form__search-input" type="search" name="Имя" placeholder="Я хочу купить...">
+  <input class="form__search-input" type="search" name="Имя" placeholder="Я хочу купить..." aria-label="Форма поиска по сайту, введите название товара">
   <svg class="form__search-search">
     <use xlink:href="img/sprite.svg#search"></use>
   </svg>
-  <button class="btn-reset form__search-btn" type="submit">
+  <button class="btn-reset form__search-btn" type="submit" aria-label="Начать поиск по товарам">
     <svg class="form__search-btn-img">
       <use xlink:href="img/sprite.svg#arrowSearch"></use>
     </svg>
