--- a/src/partials/suppliers.html
+++ b/src/partials/suppliers.html
@@ -1,9 +1,9 @@
 <section class="suppliers">
   <div class="container">
-    <h1 class="section-title suppliers__title">Сотрудничество</h1>
+    <h1 class="section-title suppliers__title" tabindex="0" aria-label="Вы нахоитесь в секции сотруднечиство">Сотрудничество</h1>
     <div class="suppliers__content">
-      <h2 class="suppliers__subtitle">Поставщикам</h2>
-      <p class="suppliers__text">
+      <h2 class="suppliers__subtitle" tabindex="0">Поставщикам</h2>
+      <p class="suppliers__text" tabindex="0">
         При планировании обстановки торгового помещения важно обустроить его <no-typography>с комфортом</no-typography> для покупателей: грамотно зонировать, обеспечить эффективную демонстрацию и хранение товаров в зале. Если вам необходимо комплексное оснащение, организация зоны отдыха или отдельные предметы меблировки для поддержания эффективной торговой деятельности, мы поможем выбрать продукцию с учетом нагрузки <no-typography>от поступающего</no-typography> трафика.
       </p>
     </div>
