--- a/src/partials/useful.html
+++ b/src/partials/useful.html
@@ -1,7 +1,7 @@
 <section class="useful">
   <div class="container useful__container">
     <div class="useful__wrapper">
-      <h2 class="section-title useful__title">Полезное</h2>
+      <h2 class="section-title useful__title" tabindex="0" aria-label="Вы находитесь в секции полезное">Полезное</h2>
       <div class="useful__controls">
         <button class="btn-reset useful__controls-btn useful-controls-prev">
           <svg class="useful__controls-btn-img useful__controls-btn-img-prev">
