--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__wrap">
     <div class="container footer__container">
       <div class="footer__content">
-        <a href="index.html" class="footer__link">
+        <a href="index.html" class="footer__link" aria-label="Логотип интренет-магазина SitDownPls">
           <img loading="lazy" src="img/logo.svg" class="footer__image" width="187" height="27"
             alt="Логотип сети магазинов SitDownPls">
         </a>
