--- a/src/partials/navInfo.html
+++ b/src/partials/navInfo.html
@@ -1,4 +1,4 @@
-<nav class="nav">
+<nav class="nav" aria-label="Маленькая дополнительная">
   <ul class="list-reset nav__info-list">
     <li class="nav__info-item"><a href="#" class="nav__info-link">О компании</a></li>
     <li class="nav__info-item"><a href="#" class="nav__info-link">Гарантия и возврат</a></li>
