--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -1,7 +1,7 @@
-<section class="special">
+<section class="special"></section>>
   <div class="container special__container">
     <div class="special__wrapper">
-      <h2 class="special__title section-title">Специальные предложения</h2>
+      <h2 class="special__title section-title" tabindex="0" aria-label="Вы находитесь в секции специальные предложения">Специальные предложения</h2>
       <div class="special__controls">
         <button class="btn-reset special__controls-btn special-controls-prev">
           <svg class="special__controls-prev-img special__controls-img">
