--- a/src/partials/userShopBtn.html
+++ b/src/partials/userShopBtn.html
@@ -1,10 +1,10 @@
 <div class="usershop">
-  <button class="btn-reset usershop__user">
+  <button class="btn-reset usershop__user" aria-label="Войти в личный кабинет">
     <svg class="usershop__user-img">
       <use xlink:href="img/sprite.svg#user"></use>
     </svg>
   </button>
-  <button class="btn-reset usershop__shop">
+  <button class="btn-reset usershop__shop" aria-label="Открыть корзину товаров">
     <span class="usershop__shop-count">0</span>
     <svg class="usershop__shop-img">
       <use xlink:href="img/sprite.svg#shop"></use>
