--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -166,4 +166,6 @@ input[type="search"]::-webkit-search-results-decoration {
   font-size: 32px;
   line-height: 100%;
   color: var(--night-rider-color);
+  bottom: none;
+  outline: none;
 }
