--- a/src/scss/components/_guarantees.scss
+++ b/src/scss/components/_guarantees.scss
@@ -13,6 +13,7 @@
     font-size: 24px;
     line-height: 33px;
     color: var(--night-rider-color);
+    outline: none;
 
     @include mobile {
       & {
@@ -71,6 +72,7 @@
     font-size: 16px;
     line-height: 180%;
     color: var(--grey-shade-color);
+    outline: none;
 
     @include mobile {
       & {
@@ -100,6 +102,7 @@
       font-size: 24px;
       line-height: 150%;
       color: var(--night-rider-color);
+      outline: none;
 
       @include mobile {
         & {
