--- a/src/scss/components/_profit.scss
+++ b/src/scss/components/_profit.scss
@@ -11,6 +11,7 @@
     font-size: 24px;
     line-height: 33px;
     color: var(--night-rider-color);
+    outline: none;
 
     @include mobile {
       & {
@@ -40,6 +41,7 @@
     font-size: 16px;
     line-height: 150%;
     color: var(--grey-shade-color);
+    outline: none;
 
     @include mobile {
       & {
