feat: add validation in header search

--- a/src/partials/searchCatalog.html
+++ b/src/partials/searchCatalog.html
@@ -1,5 +1,5 @@
 <div class="form__search-wrapper">
-  <input class="form__search-input" type="search" name="Имя" placeholder="Я хочу купить..." aria-label="Форма поиска по сайту, введите название товара">
+  <input class="form__search-input input-search" type="search" name="Имя" placeholder="Я хочу купить..." aria-label="Форма поиска по сайту, введите название товара">
   <svg class="form__search-search">
     <use xlink:href="img/sprite.svg#search"></use>
   </svg>
