fix: sction special

--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -1,4 +1,4 @@
-<section class="special"></section>>
+<section class="special">
   <div class="container special__container">
     <div class="special__wrapper">
       <h2 class="special__title section-title" tabindex="0" aria-label="Вы находитесь в секции специальные предложения">Специальные предложения</h2>
