fix: refactor code index.html

--- a/src/partials/oxford.html
+++ b/src/partials/oxford.html
@@ -18,7 +18,7 @@
     <p class="oxford__text">Новая коллекция изысканных кресел</p>
     <a href="#no-scrolling" class="btn-reset btn-all oxford__link">Ознакомиться</a>
   </div>
-  <div class="container oxford__container--mobile">
-    <a href="#no-scrolling" class="btn-reset btn-all oxford__link oxford__link--mobile">Ознакомиться</a>
+  <div class="container oxford__container-mobile">
+    <a href="#no-scrolling" class="btn-reset btn-all oxford__link oxford__link-mobile">Ознакомиться</a>
   </div>
 </section>
