--- a/src/partials/productModal.html
+++ b/src/partials/productModal.html
@@ -1,5 +1,7 @@
-<div class="graph-modal product__modal">
-  @include('productModalSwiper.html')
-  @include('productModalBuyOneClick.html')
-  @include('productModalSuccess.html')
+<div class="product">
+  <div class="graph-modal product__modal">
+    @include('productModalSwiper.html')
+    @include('productModalBuyOneClick.html')
+    @include('productModalSuccess.html')
+  </div>
 </div>
