--- a/src/scss/components/_productD-31InfoSecond.scss
+++ b/src/scss/components/_productD-31InfoSecond.scss
@@ -1,6 +1,7 @@
 .product {
   &__info {
     &-second {
+      margin-bottom: 82px;
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       grid-auto-rows: auto;
@@ -12,8 +13,15 @@
         }
       }
 
+      @include tablet {
+        & {
+          margin-bottom: 70.5px;
+        }
+      }
+
       @include high-tablet {
         & {
+          margin-bottom: 32.5px;
           grid-template-columns: repeat(6, 1fr);
         }
       }
