--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,8 +4,8 @@
     <h2 class="section-title contacts__title">Контакты</h2>
     <div class="contacts__wrapper">
       <form action="#" class="contacts__form">
-        <input class="contacts__form-input" id="search-input" type="text" placeholder="Поиск магазина">
-        <button class="btn-all btn-reset contacts__form-btn">Поиск</button>
+        <input class="contacts__form-input" id="suggest" type="text" placeholder="Поиск магазина">
+        <button class="btn-all btn-reset contacts__form-btn js-search">Поиск</button>
       </form>
       <div class="contacts__form-map" id="map"></div>
     </div>
