--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -5,7 +5,7 @@
     <div class="contacts__wrapper">
       <form action="#" class="contacts__form">
         <input class="contacts__form-input" id="suggest" type="text" placeholder="Поиск магазина">
-        <button class="btn-all btn-reset contacts__form-btn js-search">Поиск</button>
+        <button class="btn-all btn-reset contacts__form-btn js-search" type="button">Поиск</button>
       </form>
       <div class="contacts__form-map" id="map"></div>
     </div>
